fix exam config defaults, code cleanup